added tiny fix to spacing on header in my journey section

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,7 @@ nav .right a span {
 .testimony-section h2 {
   font-size: 35px;
   margin-bottom: 30px;
+  margin-left: 50px;
 }
 
 .testimony-section .group {
